name:                zip-stream
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dylex/zip-stream#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/dylex/zip-stream

library
  exposed-modules:     
    Codec.Archive.Zip.Conduit.UnZip
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >= 4.7 && < 5,
    binary,
    binary-conduit,
    bytestring,
    conduit,
    conduit-extra,
    digest,
    time
