name:                zip-stream
version:             0
synopsis:            ZIP file stream processing using conduits
description:         Process (extract and create) zip files as streams, accessing individual files without having to write a zip file to disk, unlike zip-conduit.  Unfortunately, processing zip files in this way introduces some limitations on what ZIP features can be supported, but the goal is to support most cases.
license:             BSD3
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/dylex/zip-stream

library
  exposed-modules:     
    Codec.Archive.Zip.Conduit.UnZip
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >= 4.8 && < 5,
    binary >= 0.7.2,
    binary-conduit,
    bytestring,
    conduit,
    conduit-extra,
    digest,
    exceptions,
    primitive,
    time,
    transformers-base

executable unzip-stream
  main-is: unzip.hs
  hs-source-dirs: cmd
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:
    base >=4.7 && <5,
    bytestring,
    conduit,
    conduit-extra,
    directory,
    filepath,
    time,
    zip-stream
